[gd_scene load_steps=15 format=2]

[ext_resource path="res://tileset/industrial.tres" type="TileSet" id=1]
[ext_resource path="res://Branch/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://kanban/pixil-frame-0 (16).png" type="Texture" id=3]
[ext_resource path="res://Cenas/plataforma_movel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Script/plataforma_movel2.gd" type="Script" id=5]
[ext_resource path="res://Branch/TimeTrap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/PassagemGantt2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Script/Mapap_do_Kanban.gd" type="Script" id=8]
[ext_resource path="res://Cenas/popUpKanban.tscn" type="PackedScene" id=9]
[ext_resource path="res://kanban/asdfasdf.png" type="Texture" id=10]
[ext_resource path="res://efeito sonoros/Game Button Sounds Pack - Free Sounds [TubeRipper (mp3cut.net) (1).mp3" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "new",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41, 39.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 0.8125 )

[node name="mapa_kanban" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 345.0 ],
"_edit_vertical_guides_": [ -510.0 ]
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="TileMap3" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 262178, 1, 0, 262179, 1, 0, 262180, 1, 0, 262181, 1, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 262187, 1, 0, 262188, 1, 0, 262189, 1, 0, 262190, 1, 0, 262191, 1, 0, 262192, 1, 0, 262193, 1, 0, 262194, 1, 0, 262195, 1, 0, 262196, 1, 0, 262197, 2, 0, 458698, 6, 0, 458699, 1, 0, 458700, 1, 0, 458701, 1, 0, 458702, 1, 0, 458703, 1, 0, 458704, 2, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 524234, -1073741823, 0, 524235, -1610612729, 0, 524236, -1610612729, 0, 524237, -1610612729, 0, 524238, -1610612729, 0, 524239, -1610612729, 0, 524240, -1610612735, 0, 589770, -1073741823, 0, 589771, 7, 0, 589772, 7, 0, 589773, 7, 0, 589774, 7, 0, 589775, 7, 0, 589776, -1610612735, 0, 524329, 4, 0, 524330, 4, 0, 524331, 4, 0, 524332, 4, 0, 524333, 4, 0, 655306, -1073741823, 0, 655307, 7, 0, 655308, 7, 0, 655309, 7, 0, 655310, 7, 0, 655311, 7, 0, 655312, -1610612735, 0, 655315, 6, 0, 655316, 1, 0, 655317, 1, 0, 655318, 2, 0, 589850, 4, 0, 589851, 4, 0, 589852, 4, 0, 589853, 4, 0, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 720842, -1073741823, 0, 720843, 7, 0, 720844, 7, 0, 720845, 7, 0, 720846, 7, 0, 720847, 7, 0, 720848, -1610612735, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 4, 0, 655400, 4, 0, 786378, -1073741823, 0, 786379, 7, 0, 786380, 7, 0, 786381, 7, 0, 786382, 7, 0, 786383, 7, 0, 786384, -1610612735, 0, 786393, 6, 0, 786394, 1, 0, 786395, 1, 0, 786396, 2, 0, 851914, -1073741823, 0, 851915, 7, 0, 851916, 7, 0, 851917, 7, 0, 851918, 7, 0, 851919, 7, 0, 851920, -1610612735, 0, 786479, 4, 0, 786480, 4, 0, 786481, 4, 0, 786482, 4, 0, 786483, 4, 0, 917450, -1073741823, 0, 917451, 7, 0, 917452, 7, 0, 917453, 7, 0, 917454, 7, 0, 917455, 7, 0, 917456, -1610612735, 0, 917472, 6, 0, 917473, 1, 0, 917474, 1, 0, 917475, 2, 0, 982986, -1073741823, 0, 982987, 7, 0, 982988, 7, 0, 982989, 7, 0, 982990, 7, 0, 982991, 7, 0, 982992, -1610612735, 0, 917545, 4, 0, 917546, 4, 0, 917547, 4, 0, 917548, 4, 0, 917549, 4, 0, 1048522, -1073741823, 0, 1048523, 7, 0, 1048524, 7, 0, 1048525, 7, 0, 1048526, 7, 0, 1048527, 7, 0, 1048528, -1610612735, 0, 1114058, -1073741823, 0, 1114059, 7, 0, 1114060, 7, 0, 1114061, 7, 0, 1114062, 7, 0, 1114063, 7, 0, 1114064, -1610612735, 0, 1114088, 6, 0, 1114089, 1, 0, 1114090, 1, 0, 1114091, 1, 0, 1114092, 1, 0, 1114093, 1, 0, 1114094, 1, 0, 1114095, 1, 0, 1114096, 1, 0, 1114097, 1, 0, 1114098, 1, 0, 1114099, 1, 0, 1114100, 1, 0, 1114101, 1, 0, 1114102, 1, 0, 1114103, 2, 0, 1048579, 6, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 2, 0, 1048599, 6, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 2, 0, 1048610, 6, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 2, 0, 1179594, -1073741823, 0, 1179595, 7, 0, 1179596, 7, 0, 1179597, 7, 0, 1179598, 7, 0, 1179599, 7, 0, 1179600, -1610612735, 0, 1179624, -1073741823, 0, 1179625, 7, 0, 1179626, 7, 0, 1179627, 7, 0, 1179628, 7, 0, 1179629, 7, 0, 1179630, 7, 0, 1179631, 7, 0, 1179632, 7, 0, 1179633, 7, 0, 1179634, 7, 0, 1179635, 7, 0, 1179636, 7, 0, 1179637, 7, 0, 1179638, 7, 0, 1179639, -1610612735, 0, 1114115, -1073741823, 0, 1114116, 7, 0, 1114117, 7, 0, 1114118, 7, 0, 1114119, 7, 0, 1114120, 7, 0, 1114121, 7, 0, 1114122, 7, 0, 1114123, 7, 0, 1114124, -1610612735, 0, 1114135, -1073741823, 0, 1114136, 7, 0, 1114137, 7, 0, 1114138, 7, 0, 1114139, 7, 0, 1114140, 7, 0, 1114141, -1610612735, 0, 1114146, -1073741823, 0, 1114147, 7, 0, 1114148, 7, 0, 1114149, 7, 0, 1114150, 7, 0, 1114151, -1610612735, 0, 1245130, -1073741823, 0, 1245131, 7, 0, 1245132, 7, 0, 1245133, 7, 0, 1245134, 7, 0, 1245135, 7, 0, 1245136, -1610612735, 0, 1245160, -1073741823, 0, 1245161, 7, 0, 1245162, 7, 0, 1245163, 7, 0, 1245164, 7, 0, 1245165, 7, 0, 1245166, 7, 0, 1245167, 7, 0, 1245168, 7, 0, 1245169, 7, 0, 1245170, 7, 0, 1245171, 7, 0, 1245172, 7, 0, 1245173, 7, 0, 1245174, 7, 0, 1245175, -1610612735, 0, 1179651, -1073741823, 0, 1179652, 7, 0, 1179653, 7, 0, 1179654, 7, 0, 1179655, 7, 0, 1179656, 7, 0, 1179657, 7, 0, 1179658, 7, 0, 1179659, 7, 0, 1179660, -1610612735, 0, 1179671, -1073741823, 0, 1179672, 7, 0, 1179673, 7, 0, 1179674, 7, 0, 1179675, 7, 0, 1179676, 7, 0, 1179677, -1610612735, 0, 1179682, -1073741823, 0, 1179683, 7, 0, 1179684, 7, 0, 1179685, 7, 0, 1179686, 7, 0, 1179687, -1610612735, 0, 1310666, -1073741823, 0, 1310667, 7, 0, 1310668, 7, 0, 1310669, 7, 0, 1310670, 7, 0, 1310671, 7, 0, 1310672, -1610612735, 0, 1310696, -1073741823, 0, 1310697, 7, 0, 1310698, 7, 0, 1310699, 7, 0, 1310700, 7, 0, 1310701, 7, 0, 1310702, 7, 0, 1310703, 7, 0, 1310704, 7, 0, 1310705, 7, 0, 1310706, 7, 0, 1310707, 7, 0, 1310708, 7, 0, 1310709, 7, 0, 1310710, 7, 0, 1310711, -1610612735, 0, 1245187, -1073741823, 0, 1245188, 7, 0, 1245189, 7, 0, 1245190, 7, 0, 1245191, 7, 0, 1245192, 7, 0, 1245193, 7, 0, 1245194, 7, 0, 1245195, 7, 0, 1245196, -1610612735, 0, 1245207, -1073741823, 0, 1245208, 7, 0, 1245209, 7, 0, 1245210, 7, 0, 1245211, 7, 0, 1245212, 7, 0, 1245213, -1610612735, 0, 1245218, -1073741823, 0, 1245219, 7, 0, 1245220, 7, 0, 1245221, 7, 0, 1245222, 7, 0, 1245223, -1610612735, 0 )

[node name="plataforma_movel2" parent="." instance=ExtResource( 4 )]
position = Vector2( -172, 504 )
script = ExtResource( 5 )
horizontal = true

[node name="plataforma_movel3" parent="." instance=ExtResource( 4 )]
position = Vector2( 428, 509 )
script = ExtResource( 5 )
horizontal = true

[node name="Monstro" parent="." instance=ExtResource( 6 )]
position = Vector2( -1228, 321 )

[node name="Monstro2" parent="." instance=ExtResource( 6 )]
position = Vector2( 284, 482 )

[node name="Monstro3" parent="." instance=ExtResource( 6 )]
position = Vector2( 166, 481 )

[node name="Monstro4" parent="." instance=ExtResource( 6 )]
position = Vector2( 770, 482 )

[node name="Monstro5" parent="." instance=ExtResource( 6 )]
position = Vector2( 1219, 293 )

[node name="Monstro6" parent="." instance=ExtResource( 6 )]
position = Vector2( 1057, 99 )

[node name="Monstro7" parent="." instance=ExtResource( 6 )]
position = Vector2( 1256, 98 )

[node name="Monstro8" parent="." instance=ExtResource( 6 )]
position = Vector2( 1398, 98 )

[node name="Area2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 1614, 62 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 1331, 28 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -1838, 314.5 )
scale = Vector2( 0.0413306, 0.0398185 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1838, 314.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -1837, 356 )
shape = SubResource( 3 )

[node name="kanban" parent="." instance=ExtResource( 9 )]

[node name="blocoFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 0.619

[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="blocoFx" to="." method="_on_blocoFx_finished"]
